--- a/QLPhongMachTuWPF/ResourceXAML/AddDictionary.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/AddDictionary.xaml
@@ -6,7 +6,7 @@
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
-
+        <Setter Property="Margin" Value="20 10 0 0"/>
     </Style>
 
     <Style x:Key="textBlock" TargetType="TextBlock">
@@ -49,4 +49,18 @@
         <Setter Property="Height" Value="50"/>
         <Setter Property="FontSize" Value="20"/>
     </Style>
+
+    <Style x:Key="radioBtnAdd" TargetType="RadioButton">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        
+    </Style>
+
+    <Style x:Key="StckPanel" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Horizontal"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Width" Value="300"/>
+        <Setter Property="Margin" Value="50 0 0 0"/>
+    </Style>
+    
 </ResourceDictionary>
