add the window pop up when click and change the color

--- a/QLPhongMachTuWPF/App.xaml
+++ b/QLPhongMachTuWPF/App.xaml
@@ -48,7 +48,7 @@
             </Style>
             <Style x:Key="DataGridColumnHeaderStyle2" TargetType="{x:Type DataGridColumnHeader}">
 
-                <Setter Property="Background" Value="#3693ff"/>
+                <Setter Property="Background" Value="#1b7ae8"/>
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="FontSize" Value="15"/>
                 <Setter Property="FontWeight" Value="Bold"/>
@@ -185,7 +185,7 @@
 
             <Style x:Key="DataGridColumnHeaderStyle1" TargetType="{x:Type DataGridColumnHeader}">
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
-                <Setter Property="Background" Value="#3693ff"/>
+                <Setter Property="Background" Value="#1b7ae8"/>
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="Margin" Value="15 0 15 10"/>
                 <Setter Property="Template">
@@ -215,11 +215,11 @@
 
                 <Style.Triggers>
                     <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Background" Value="#b3e5fc"/>
+                        <Setter Property="Background" Value="#3693ff"/>
                         <Setter Property="Foreground" Value="#ffffff"/>
                     </Trigger>
                     <Trigger Property="IsSelected" Value="True">
-                        <Setter Property="Background" Value="#b3e5fc"/>
+                        <Setter Property="Background" Value="#3693ff"/>
                         <Setter Property="Foreground" Value="White"/>
                     </Trigger>
                     <MultiTrigger>
