--- a/QLPhongMachTuWPF/ResourceXAML/UserControlStyles.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/UserControlStyles.xaml
@@ -1,7 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ListBtn" TargetType="Button">
-        <Setter Property="Background" Value="#3693ff"/>
+        <Setter Property="Background">
+            <Setter.Value>
+                <LinearGradientBrush>
+                    <GradientStop Color="#1ca7ec" Offset="0.0"/>
+                    <GradientStop Color="#1f2f98" Offset="1"/>
+                </LinearGradientBrush>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Foreground" Value="white"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Width" Value="50"/>
@@ -57,7 +64,14 @@
     </Style>
 
     <Style x:Key="addBtn" TargetType="Button">
-        <Setter Property="Background" Value="#3693ff"/>
+        <Setter Property="Background">
+            <Setter.Value>
+                <LinearGradientBrush>
+                    <GradientStop Color="#1ca7ec" Offset="0.0"/>
+                    <GradientStop Color="#0e67a8" Offset="1"/>
+                </LinearGradientBrush>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Width" Value="150"/>
