--- a/QLPhongMachTuWPF/View/Patients.xaml
+++ b/QLPhongMachTuWPF/View/Patients.xaml
@@ -34,7 +34,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}">
+        <Button Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}" Click="AddPatientButton_Click">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Patient" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
@@ -78,7 +78,15 @@
                 <Rectangle Width="1" Fill="#dee4ec" Margin="3 7"/>
 
                 <Button Style="{StaticResource pagingBtn}" Content="1"/>
-                <Button Style="{StaticResource pagingBtn}" Content="2" Background="#3693ff" Foreground="White"/>
+                <Button Style="{StaticResource pagingBtn}" Content="2" Foreground="White">
+                    <Button.Background>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#1ca7ec" Offset="0.0"/>
+                            <GradientStop Color="#1f2f98" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
+
                 <Button Style="{StaticResource pagingBtn}" Content="3"/>
 
                 <TextBlock Text="..." Foreground="Black" VerticalAlignment="Center" FontSize="15" Margin="10 0"/>
