--- a/QLPhongMachTuWPF/App.xaml
+++ b/QLPhongMachTuWPF/App.xaml
@@ -1,16 +1,19 @@
 ﻿<Application x:Class="QLPhongMachTuWPF.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            
   xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
               xmlns:local="clr-namespace:QLPhongMachTuWPF"
              xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Classic"
 
-  StartupUri="MainWindow.xaml">
+               StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="Blue" SecondaryColor="Lime" />
+                <ResourceDictionary Source="ResourceXAML/MainResource.xaml"/>
                 <ResourceDictionary Source="ResourceXAML/UserControlStyles.xaml"/>
+            
                 <ResourceDictionary Source="ViewModel/DataTemplate.xaml"/>
                 <ResourceDictionary Source="ResourceXAML/Page.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" />
