--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -1,4 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:viewmodel ="clr-namespace:QLPhongMachTuWPF.ViewModel"
+                   
+                    >
+
+    <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
 </ResourceDictionary>
