--- a/QLPhongMachTuWPF/View/Staffs.xaml
+++ b/QLPhongMachTuWPF/View/Staffs.xaml
@@ -7,9 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="880"
              xmlns:vm="clr-namespace:QLPhongMachTuWPF.ViewModel"
+             
             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             Style="{StaticResource Page_Style}">
-
+             Style="{StaticResource Page_Style}"
+             
+              >
+            
     <UserControl.DataContext>
         <vm:StaffsVM/>
     </UserControl.DataContext>
@@ -37,7 +40,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}" Click="AddStaffButton_Click">
+        <Button Command="{Binding AddStaffCommand}" Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Staff" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
