--- a/QLPhongMachTuWPF/View/Patients.xaml
+++ b/QLPhongMachTuWPF/View/Patients.xaml
@@ -34,7 +34,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}" Click="AddPatientButton_Click">
+        <Button Grid.Row="0" Margin="0 10 40 10" Command="{Binding CommandDeletePatients }"  Style="{StaticResource addBtn}">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Patient" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
