--- a/QLPhongMachTuWPF/View/ManageAppointments.xaml
+++ b/QLPhongMachTuWPF/View/ManageAppointments.xaml
@@ -37,7 +37,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}" Click="Button_Click">
+        <Button Grid.Row="0" Command="{Binding AddAppointmentCommand}" Margin="0 10 40 10"  Style="{StaticResource addBtn}" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Appointment" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
