--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -6,4 +6,5 @@
                     >
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
-</ResourceDictionary>
+    <viewmodel:PatientsVM x:Key="PatientsVM" ></viewmodel:PatientsVM>
+</ResourceDictionary> 
