--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -8,4 +8,5 @@
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
     <viewmodel:PatientsVM x:Key="PatientsVM" ></viewmodel:PatientsVM>
     <viewmodel:StaffsVM x:Key="StaffsVM" ></viewmodel:StaffsVM>
+    <viewmodel:ListsVM x:Key="ListsVM" ></viewmodel:ListsVM>
 </ResourceDictionary> 
