--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -7,4 +7,10 @@
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
     <viewmodel:PatientsVM x:Key="PatientsVM" ></viewmodel:PatientsVM>
+    <viewmodel:StaffsVM x:Key="StaffsVM" ></viewmodel:StaffsVM>
+    <viewmodel:ListsVM x:Key="ListsVM" ></viewmodel:ListsVM>
+    <viewmodel:DiagnosisVM x:Key = "DiagnosisVM"></viewmodel:DiagnosisVM>
+    <viewmodel:InvoiceVM x:Key="InvoiceVM"></viewmodel:InvoiceVM>
+    <viewmodel:AddInvoiceVM x:Key="AddInvoiceVM"></viewmodel:AddInvoiceVM>
+    
 </ResourceDictionary> 
