--- a/QLPhongMachTuWPF/View/AddInvoice.xaml
+++ b/QLPhongMachTuWPF/View/AddInvoice.xaml
@@ -6,8 +6,14 @@
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
         Title="AddInvoice" Height="600" Width="800"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        DataContext="{StaticResource AddInvoiceVM}"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+        xmlns:vm="clr-namespace:QLPhongMachTuWPF.ViewModel"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DataContext="{d:DesignInstance Type=vm:AddInvoiceVM}"
+        x:Name="addInvoiceForm"
         WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
+        
+        
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -69,7 +75,7 @@ Grid.Column="1" Panel.ZIndex="1"
                 <!--Name-->
                 <Grid Grid.Row="0">
                     <TextBlock Text="Examination fee" Style="{StaticResource textBlock}" Margin="150 0 0 0" VerticalAlignment="Center"/>
-                    <TextBox
+                    <TextBox Name="txbAddExaminationFee"
                                     VerticalAlignment="Center"
                                     materialDesign:HintAssist.Hint="Name"
                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
@@ -87,11 +93,12 @@ Grid.Column="1" Panel.ZIndex="1"
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Pharmancy fee" Style="{StaticResource anotherTextBlock}" VerticalAlignment="Center"/>
                     <TextBox
-            VerticalAlignment="Center"
-            materialDesign:HintAssist.Hint="Address"
-            Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-            HorizontalAlignment="Center" Width="300" Margin="150,0,0,0"
-            FontSize="16" Grid.ColumnSpan="2"
+                    x:Name="txbAddPharmacyFee"
+                    VerticalAlignment="Center"
+                    materialDesign:HintAssist.Hint="Address"
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                    HorizontalAlignment="Center" Width="300" Margin="150,0,0,0"
+                    FontSize="16" Grid.ColumnSpan="2"
             
      />
                 </Grid>
@@ -112,11 +119,12 @@ Grid.Column="1" Panel.ZIndex="1"
         </Grid>
         <!-- Phần bên dưới Add Staff-->
         <Grid Grid.Row="2" Background="White" >
-            <Button Content="Add invoice" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10 10"
+            <Button   Content="Add invoice" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10 10" 
                 Background="#3693ff" Foreground="White"
                 Width="250"
               Height="50"
-                FontSize="20" ></Button>
+                FontSize="20" >
+            </Button>
         </Grid>
     </Grid>
 </Window>
