--- a/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
@@ -119,7 +119,7 @@ Grid.Column="1" Panel.ZIndex="1"
                 Background="#3693ff" Foreground="White"
                 Width="250"
               Height="50"
-                FontSize="20" Click="Button_Click"></Button>
+                FontSize="20"></Button>
         </Grid>
     </Grid>
 </Window>
